# snaplet-redis

./: .travis.yml  CHANGELOG.md  ChangeLog  ChangeLog.md  LICENSE  README.md  package.yaml  snap-redis.cabal  snaplet-redis.cabal  stack-previous.yaml  stack.yaml
.github/workflows/: ci.yaml
example/: Site.hs
src/Snap/Snaplet/: RedisDB.hs
src/Snap/Snaplet/Auth/Backends/: Redis.hs
src/Snap/Snaplet/Session/Backends/: RedisSession.hs
